# Netflix-Data

./: Netflix Data.ipynb  README.md  pyproject.toml
